--- a/ProjetSession/AjoutProjetContent.xaml
+++ b/ProjetSession/AjoutProjetContent.xaml
@@ -13,16 +13,13 @@
     <Grid>
         <StackPanel HorizontalAlignment="Center" Orientation="Vertical">  
 
-            <TextBox x:Name="tbIdClient" PlaceholderText="Identifiant du client"/>
-            <TextBlock x:Name="errClient" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
-
             <TextBox x:Name="tbTitre" PlaceholderText="Titre"/>
-            <TextBlock x:Name="errTitre" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock
+            <TextBlock x:Name="errTitre" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
+            
             <CalendarDatePicker x:Name="cdpDate" Header="Date" PlaceholderText="Choisissez une date" HorizontalAlignment="Stretch"/>
+            <TextBlock x:Name="errDate" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
 
-            <TextBlock x:Name="dateVide" Foreground="red" FontWeight="Bold"/>
-
-            <ComboBox x:Name="cbClient" HorizontalAlignment="Stretch" Header="Client" SelectedIndex="-1" x:DefaultBindMode="OneWay">
+            <ComboBox x:Name="cbClient" DisplayMemberPath="Nom" HorizontalAlignment="Stretch" PlaceholderText="Client" SelectedIndex="-1" x:DefaultBindMode="OneWay">
                 
             </ComboBox>
             <TextBlock x:Name="errClientt" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
