--- a/ProjetSession/AjouterEmploye.xaml
+++ b/ProjetSession/AjouterEmploye.xaml
@@ -14,31 +14,31 @@
             <StackPanel HorizontalAlignment="Center" Orientation="Vertical">
                 <TextBlock FontSize="12pt" Margin="0 0 0 20">Entrer les informations</TextBlock>
 
-                <TextBox x:Name="tbxNom" PlaceholderText="Nom"></TextBox>
+                <TextBox x:Name="tbxNom" Header="Nom"></TextBox>
                 <TextBlock x:Name="errNom" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
 
-                <TextBox x:Name="tbxPrenom" PlaceholderText="Prénom"></TextBox>
+                <TextBox x:Name="tbxPrenom" Header="Prénom"></TextBox>
                 <TextBlock x:Name="errPrenom" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
-                <CalendarDatePicker x:Name="dtDateNaiss" Width="400" PlaceholderText="Date de naissance"></CalendarDatePicker>
+                <CalendarDatePicker x:Name="dtDateNaiss" Width="400" Header="Date de naissance"></CalendarDatePicker>
                 <TextBlock x:Name="errDate" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
-                <TextBox x:Name="tbxEmail" PlaceholderText="Email"></TextBox>
+                <TextBox x:Name="tbxEmail" Header="Email"></TextBox>
                 <TextBlock x:Name="errEmail" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
-                <TextBox x:Name="tbxAdresse" PlaceholderText="Adresse"></TextBox>
+                <TextBox x:Name="tbxAdresse" Header="Adresse"></TextBox>
                 <TextBlock x:Name="errAdresse" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
-                <CalendarDatePicker x:Name="calDateEmb" Width="400" PlaceholderText="Date d'embauche"></CalendarDatePicker>
+                <CalendarDatePicker x:Name="calDateEmb" Width="400" Header="Date d'embauche"></CalendarDatePicker>
                 <TextBlock x:Name="errEmbauche" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
-                <TextBox x:Name="tbxTaux" PlaceholderText="Taux"></TextBox>
+                <TextBox x:Name="tbxTaux" Header="Taux"></TextBox>
                 <TextBlock x:Name="errTaux" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
-                <TextBox x:Name="tbxPhoto" PlaceholderText="Photo"></TextBox>
+                <TextBox x:Name="tbxPhoto" Header="Photo"></TextBox>
                 <TextBlock x:Name="errPhoto" Foreground="Red" FontSize="12pt" Margin="0 10 0 10"></TextBlock>
 
-                <ComboBox x:Name="cbxStatut" Width="400" PlaceholderText="Statut">
+                <ComboBox x:Name="cbxStatut" Width="400" Header="Statut">
                     <x:String>Journalier</x:String>
                     <x:String>Permanent</x:String>
                 </ComboBox>
