--- a/ProjetSession/MainWindow.xaml
+++ b/ProjetSession/MainWindow.xaml
@@ -18,9 +18,9 @@
                 <NavigationViewItem Content="Liste employés" x:Name="iListeEmploye" Icon="Contact2"/>
                 <NavigationViewItemSeparator/>
                 <NavigationViewItemHeader Content="Ajouter"/>
-                <NavigationViewItem Content="Ajouter un nouveau projet" x:Name="iAjoutProjet" Tapped="iAjoutProjet_Tapped" SelectsOnInvoked="False" Icon="Add"/>
+                <NavigationViewItem Content="Créer un nouveau projet" x:Name="iAjoutProjet" Tapped="iAjoutProjet_Tapped" SelectsOnInvoked="False" Icon="Add"/>
                 <NavigationViewItem Content="Ajouter un nouvel employé" x:Name="iAjoutEmpl" Tapped="iAjoutEmpl_Tapped" SelectsOnInvoked="False" Icon="AddFriend"/>
-                <NavigationViewItem Content="Ajouter un nouveau client" x:Name="iAjoutClient" Icon="AddFriend"/>
+                <NavigationViewItem Content="Ajouter un nouveau client" x:Name="iAjoutClient" Tapped="iAjoutClient_Tapped" SelectsOnInvoked="False" Icon="AddFriend"/>
                 <TextBlock x:Name="dialogAjout"/>
             </NavigationView.MenuItems>
 
