--- a/ProjetSession/AjoutProjetContent.xaml
+++ b/ProjetSession/AjoutProjetContent.xaml
@@ -11,27 +11,39 @@
     PrimaryButtonClick="ContentDialog_PrimaryButtonClick">
 
     <Grid>
-        <StackPanel HorizontalAlignment="Center" Orientation="Vertical">  
+        <ScrollViewer>
+            <StackPanel HorizontalAlignment="Center" Orientation="Vertical">  
 
-            <TextBox x:Name="tbTitre" Header="Titre"/>
-            <TextBlock x:Name="errTitre" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
+                <TextBox x:Name="tbTitre" Header="Titre"/>
+                <TextBlock x:Name="errTitre" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
             
-            <CalendarDatePicker x:Name="cdpDate" Header="Choisissez une date" HorizontalAlignment="Stretch"/>
-            <TextBlock x:Name="errDate" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
+                <CalendarDatePicker x:Name="cdpDate" Header="Choisissez une date" HorizontalAlignment="Stretch"/>
+                <TextBlock x:Name="errDate" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
 
-            <ComboBox x:Name="cbClient" DisplayMemberPath="Nom" HorizontalAlignment="Stretch" Header="Client" SelectedIndex="-1" x:DefaultBindMode="OneWay">
+                <ComboBox x:Name="cbClient" DisplayMemberPath="Nom" HorizontalAlignment="Stretch" Header="Client" SelectedIndex="-1" x:DefaultBindMode="OneWay">
                 
-            </ComboBox>
-            <TextBlock x:Name="errClientt" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
+                </ComboBox>
+                <TextBlock x:Name="errClient" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
 
-            <TextBox x:Name="tbDescription" Header="Description"/>
-            <TextBlock x:Name="errDesc" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
-            
-            <TextBox x:Name="tbNbEmploye" Header="Nombre d'employé requis"/>
-            <TextBlock x:Name="errNbEmploye" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
+                <TextBox x:Name="tbDescription" Header="Description"/>
+                <TextBlock x:Name="errDesc" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
 
-        
-        <!--Row 3-->
-        </StackPanel>
+                <TextBox x:Name="tbBudget" Header="Budget"/>
+                <TextBlock x:Name="errBudget" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
+
+                <TextBox x:Name="tbNbEmploye" Header="Nombre d'employé requis"/>
+                <TextBlock x:Name="errNbEmploye" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
+
+                <ComboBox x:Name="cbStatut" Header="Status" Width="400">
+                    <x:String>En cours</x:String>
+                    <x:String>Terminé</x:String>
+
+                </ComboBox>
+                <TextBlock x:Name="errStatut" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
+
+
+            <!--Row 3-->
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </ContentDialog>
