--- a/ProjetSession/AjoutClientContent.xaml
+++ b/ProjetSession/AjoutClientContent.xaml
@@ -6,9 +6,9 @@
     xmlns:local="using:ProjetSession"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:syncfusion= "using:Syncfusion.UI.Xaml.Editors"
     mc:Ignorable="d"
-    PrimaryButtonClick="ContentDialog_PrimaryButtonClick"
-    >
+    PrimaryButtonClick="ContentDialog_PrimaryButtonClick">
 
     <Grid>
         <ScrollViewer>
@@ -24,10 +24,10 @@
                 <TextBox x:Name="tbxAdresse" Header="Adresse" PlaceholderText="Entrez l'adresse"/>
                 <TextBlock x:Name="errAdresse" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"/>
 
-                <TextBox x:Name="tbxTel" Header="Numéro de téléphone" TextChanged="tbxTel_TextChanged" MaxLength="14" PlaceholderText="(   )-   -    "/>
+                <TextBox x:Name="tbxTel" Header="Numéro de téléphone" MaxLength="14"/>
                 <TextBlock x:Name="errTel" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"/>
 
-
+                <!--<syncfusion:SfMaskedTextBox x:Name="mtbTel"/>-->
 
             </StackPanel>
         </ScrollViewer>
