--- a/ProjetSession/MainWindow.xaml
+++ b/ProjetSession/MainWindow.xaml
@@ -10,7 +10,7 @@
 
     <Grid>
         <NavigationView x:Name="navView" PaneTitle="Gestion entreprise" PaneDisplayMode="Left" SelectionChanged="navView_SelectionChanged"
-        IsBackButtonVisible="Collapsed" IsSettingsVisible="False">
+    IsBackButtonVisible="Collapsed" IsSettingsVisible="False">
             <NavigationView.MenuItems>
                 <NavigationViewItemHeader Content="Listes"/>
                 <NavigationViewItem Content="Liste projets" x:Name="iListeProjet" Icon="Library"/>
@@ -18,22 +18,22 @@
                 <NavigationViewItem Content="Liste employés" x:Name="iListeEmploye" Icon="Contact2"/>
                 <NavigationViewItemSeparator/>
                 <NavigationViewItemHeader Content="Ajouter"/>
-                <NavigationViewItem Content="Créer un nouveau projet" x:Name="iAjoutProjet" Tapped="iAjoutProjet_Tapped" SelectsOnInvoked="False" Icon="Add"/>
-                <NavigationViewItem Content="Ajouter un nouvel employé" x:Name="iAjoutEmpl" Tapped="iAjoutEmpl_Tapped" SelectsOnInvoked="False" Icon="AddFriend"/>
-                <NavigationViewItem Content="Ajouter un nouveau client" x:Name="iAjoutClient" Tapped="iAjoutClient_Tapped" SelectsOnInvoked="False" Icon="AddFriend"/>
-                <TextBlock x:Name="dialogAjout" IsHitTestVisible="False"/>
+                <NavigationViewItem Content="Créer un nouveau projet" x:Name="iAjoutProjet" IsEnabled="False" Tapped="iAjoutProjet_Tapped" SelectsOnInvoked="False" Icon="Add"/>
+                <NavigationViewItem Content="Ajouter un nouvel employé" x:Name="iAjoutEmpl" IsEnabled="False" Tapped="iAjoutEmpl_Tapped" SelectsOnInvoked="False" Icon="AddFriend"/>
+                <NavigationViewItem Content="Ajouter un nouveau client" x:Name="iAjoutClient" IsEnabled="False" Tapped="iAjoutClient_Tapped" SelectsOnInvoked="False" Icon="AddFriend"/>
+                <TextBlock x:Name="dialogAjout"/>
             </NavigationView.MenuItems>
 
             <NavigationView.FooterMenuItems>
-                <NavigationViewItem Content="Importer" x:Name="iImport" Tapped="iImport_Tapped" SelectsOnInvoked="False" Icon="Import"/>
-                <NavigationViewItem Content="Exporter" x:Name="iExport" Tapped="iExport_Tapped" SelectsOnInvoked="False" Icon="Save"/>
+                <NavigationViewItem Content="Importer" x:Name="iImport" Tapped="iImport_Tapped" IsEnabled="False" SelectsOnInvoked="False" Icon="Import"/>
+                <NavigationViewItem Content="Exporter" x:Name="iExport" Tapped="iExport_Tapped" IsEnabled="False" SelectsOnInvoked="False" Icon="Save"/>
                 <NavigationViewItemSeparator/>
-                <NavigationViewItem Content="Se déconnecter" x:Name="iDeco" Tapped="iDeco_Tapped" SelectsOnInvoked="False" Icon="OpenPane"/>
-                
+                <NavigationViewItem Content="Se connnecter" x:Name="iDeco" Tapped="iDeco_Tapped" SelectsOnInvoked="False" Icon="OpenPane"/>
+
             </NavigationView.FooterMenuItems>
 
             <Frame x:Name="mainFrame"/>
         </NavigationView>
-        
+
     </Grid>
 </Window>
