--- a/ProjetSession/PageAfficherProjet.xaml
+++ b/ProjetSession/PageAfficherProjet.xaml
@@ -22,17 +22,33 @@
 
                     <GridView.ItemTemplate>
                         <DataTemplate x:DataType="local:Projet">
-                            <StackPanel CornerRadius="10" Padding="10" Orientation="Vertical" Height="300" Width="300" Margin="30" HorizontalAlignment="Center">
+                            <Border BorderBrush="Gray" BorderThickness="3">
+                                <StackPanel Orientation="Vertical" Height="300" Width="300" Margin="20" HorizontalAlignment="Center">
                                 <TextBlock Text="{x:Bind IdProjet}" FontWeight="Light" FontSize="12pt" Foreground="WhiteSmoke"/>
                                 <TextBlock Text="{x:Bind Titre}" FontSize="30pt" TextWrapping="Wrap" Foreground="White" FontWeight="SemiBold"/>
                                 <TextBlock Text="{x:Bind Description}" FontWeight="Light" FontSize="15pt" Foreground="White" Opacity="0.5" TextTrimming="WordEllipsis" TextWrapping="Wrap"/>
                                 
                                 <TextBlock FontSize="20pt" Foreground="White" Margin="0 10 0 0" Text="{x:Bind DateDebut}"/>
-                                <TextBlock Text="{x:Bind Budget}" FontWeight="Light" FontSize="15pt" Foreground="WhiteSmoke"/>
-                                <TextBlock Text="{x:Bind TotalSal}" FontWeight="Light" FontSize="15pt" Foreground="WhiteSmoke"/>
-                                <TextBlock Text="{x:Bind Statut}" FontWeight="Light" FontSize="15pt" Foreground="WhiteSmoke"/>
+                                <TextBlock Text="{x:Bind Budget, Mode=OneWay}" FontWeight="Light" FontSize="20pt" Foreground="WhiteSmoke">
+                                    <Run Text="Budget : "/>
+                                    <Run Text="{x:Bind Budget}"></Run>
+                                    <Run Text="$$"/>
+                                </TextBlock>
 
+                                <TextBlock Text="{x:Bind TotalSal, Mode=OneWay}" FontWeight="Light" FontSize="20pt" Margin="0 0 0 10" Foreground="WhiteSmoke">
+                                    <Run Text="Salaire total : "/>
+                                    <Run Text="{x:Bind TotalSal}"></Run>
+                                    <Run Text="$$"/>
+                                </TextBlock>
+
+
+                                <StackPanel  Orientation="Horizontal" HorizontalAlignment="Right">
+                                    <TextBlock x:Name="tblStatut" Text="{x:Bind Statut}" FontWeight="SemiBold" Margin="0 0 20 0" FontSize="15pt" Foreground="WhiteSmoke"/>
+                                    <Ellipse x:Name="couleurStatut" Width="8" Height="8" Margin="0 2 0 0" Fill="Green" VerticalAlignment="Center"/>
+                                </StackPanel>
+                                
                             </StackPanel>
+                            </Border>
                         </DataTemplate>
                     </GridView.ItemTemplate>
                 </GridView>
