--- a/ProjetSession/AjoutProjetContent.xaml
+++ b/ProjetSession/AjoutProjetContent.xaml
@@ -20,7 +20,7 @@
                 <CalendarDatePicker x:Name="cdpDate" Header="Choisissez une date" HorizontalAlignment="Stretch"/>
                 <TextBlock x:Name="errDate" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
 
-                <ComboBox x:Name="cbClient" DisplayMemberPath="Nom" HorizontalAlignment="Stretch" Header="Client" SelectedIndex="-1" x:DefaultBindMode="OneWay">
+                <ComboBox x:Name="cbClient" Width="400" Header="Client">
                     <x:String></x:String>
                 </ComboBox>
                 <TextBlock x:Name="errClient" Foreground="Red" FontSize="12pt" Margin="0 10 0 10" Width="400"></TextBlock>
