--- a/ProjetSession/PageAfficherClient.xaml
+++ b/ProjetSession/PageAfficherClient.xaml
@@ -37,8 +37,8 @@
         </ScrollViewer>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="25">
-            <Button x:Name="btModifier" Click="btModifier_Click" IsEnabled="False" Margin="0 0 10 0">Modifier</Button>
-            <Button x:Name="btDelete" Click="btDelete_Click" IsEnabled="False">Supprimer</Button>
+            <Button x:Name="btModifier" x:FieldModifier="public" Click="btModifier_Click" IsEnabled="False" Margin="0 0 10 0">Modifier</Button>
+            <Button x:Name="btDelete" x:FieldModifier="public" Click="btDelete_Click" IsEnabled="False">Supprimer</Button>
             <TextBlock x:Name="validation"/>
         </StackPanel>
     </Grid>
